better layout for info and h1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Balanzierer, corelightning balancing plugin</title>
   </head>
   <body>
+    <h1>Welcome to Balanzierer, a circular channel balancer</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <a id="top" title="scroll to top" href="#" onClick="window.scrollTo({top: 0, left: 0, behavior: 'smooth'}); return false;">🚀</a>
